# core

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile
.cargo/: config
.github/workflows/: Basic.yml  Release.yml  basic.yml  e2e.yml  release.yml
contracts/degen-club/: README.md
contracts/degen-club/collection/: Cargo.toml
contracts/degen-club/collection/src/: error.rs  msg.rs
contracts/degen-club/minter/: Cargo.toml
contracts/degen-club/minter/src/: contract.rs  msg.rs
contracts/fair-burn/: Cargo.toml  README.md
contracts/fair-burn/schema/: fair-burn.json  sg-fair-burn.json  stargaze-fair-burn.json
contracts/fair-burn/src/: constants.rs  contract.rs  error.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs  sudo.rs  tests.rs
contracts/loyalty/: README.md
contracts/loyalty/collection/: Cargo.toml
contracts/loyalty/collection/src/: contract.rs  msg.rs  state.rs
contracts/loyalty/minter/: Cargo.toml
contracts/loyalty/minter/src/: contract.rs
contracts/royalty-registry/: Cargo.toml  README.md
contracts/royalty-registry/.cargo/: config
contracts/royalty-registry/schema/: stargaze-royalty-registry.json
contracts/royalty-registry/src/: error.rs  execute.rs  external.rs  helpers.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs  sudo.rs  tests.rs
contracts/royalty-registry/src/tests/: setup.rs  unit_tests.rs
contracts/royalty-registry/src/tests/setup/: setup_accounts.rs  setup_contracts.rs  setup_dummy_contract.rs  setup_minter.rs
contracts/royalty-registry/src/tests/unit_tests/: execute_tests.rs  external_fn_tests.rs  sudo_tests.rs
contracts/stargaze-mutable-whitelist/: Cargo.toml  README.md
contracts/stargaze-mutable-whitelist/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
contracts/vip/: README.md
contracts/vip/collection/: Cargo.toml  README.md
contracts/vip/collection/schema/: stargaze-vip-collection.json
contracts/vip/collection/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs
contracts/vip/e2e-tests/: package.json
contracts/vip/e2e-tests/configs/: chain_config.json
contracts/vip/e2e-tests/tests/loyaltyProgram/: instantiation.test.ts  loyaltyProgramInstantiation.test.ts  mintTokens.test.ts
contracts/vip/e2e-tests/tests/setup/: context.ts
contracts/vip/e2e-tests/tests/types/: Collection.types.ts  Minter.types.ts  collection.client.ts  collection.types.ts  minter.client.ts  minter.types.ts
contracts/vip/e2e-tests/tests/utils/: stake.ts
contracts/vip/minter/: Cargo.toml  README.md
contracts/vip/minter/schema/: stargaze-vip-minter.json
contracts/vip/minter/src/: contract.rs  error.rs  msg.rs  state.rs  sudo.rs
contracts/vip/program/: Cargo.toml  README.md
contracts/vip/program/schema/: stargaze-vip-program.json
contracts/vip/program/src/: contract.rs  msg.rs  state.rs
scripts/: instantiate_fair_burn.sh  optimize.sh  schema.sh
scripts/fair-burn/: instantiate.sh  wasm_store.sh
scripts/loyalty-program/: wasm_store_collection.sh  wasm_store_minter.sh
scripts/markdown/: stargaze_fair_burn-v1.0.2.md  stargaze_fair_burn-v1.0.4.md
scripts/royalty-registry/: generate_instantiate_msg.sh  instantiate.sh
test/e2e/: Cargo.toml
test/e2e/gas_reports/: test-2078896203.json  test-337732299.json  test-3692316813.json
test/e2e/src/helpers/: chain.rs  constants.rs  instantiate.rs
test/e2e/src/tests/: fair_burn.rs  mod.rs
unit-tests/: Cargo.toml
unit-tests/src/: lib.rs
unit-tests/src/helpers/: utils.rs
unit-tests/src/royalty_registry_tests/: execute_tests.rs  external_fn_tests.rs  mod.rs  sudo_tests.rs
unit-tests/src/setup/: setup_accounts.rs  setup_contracts.rs  setup_dummy_contract.rs  setup_minter.rs
