[workspace]
members  = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
homepage   = "https://stargaze.zone"
repository = "https://github.com/public-awesome/core"
license    = "Apache-2.0"

[workspace.dependencies]
stargaze-fair-burn = { path = "contracts/fair-burn", features = ["library"] }
stargaze-royalty-registry = { path = "contracts/royalty-registry", features = [
    "library",
] }

vending-factory = { version = "2.1.0", features = ["library"] }
vending-minter  = { version = "2.1.0", features = ["library"] }
base-minter     = { version = "2.1.0", features = ["library"] }
base-factory    = { version = "2.1.0", features = ["library"] }
sg721-base      = { version = "2.1.0", features = ["library"] }
sg721           = { version = "2.1.0", features = ["library"] }

sg-index-query        = { path = "packages/sg-index-query" }
sg-std                = { path = "packages/sg-std" }
sg-marketplace-common = { version = "1.1.0" }
sg2                   = "2.1.0"

cosmwasm-schema  = "1.3.1"
cosmwasm-std     = "1.3.1"
cosmwasm-storage = "1.3.1"
cw-storage-macro = "1.1.0"
cw-storage-plus  = "1.1.0"
cw-controllers   = "1.1.0"
cw2              = "1.1.0"
cw721            = "0.18.0"
cw721-base       = "0.18.0"
cw-utils         = "1.0.1"
schemars         = "0.8.11"
semver           = "1.0.16"
serde            = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror        = "1.0.31"
anyhow           = "1.0.41"

# dev-dependencies
cw-multi-test = "0.16.5"
sg-multi-test = { path = "packages/sg-multi-test" }

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
