[package]
name          = "stargaze-fair-burn"
version       = "1.1.0"
authors       = ["Tasio Victoria <tasiovictoria@ujulabs.com>"]
description   = "Stargaze Fair Burn"
documentation = "https://docs.rs/stargaze-fair-burn"
edition       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw-utils        = { workspace = true }
sg-std          = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
semver          = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
sg-multi-test = { workspace = true }
