[package]
name          = "stargaze-fair-burn"
version       = "1.2.0"
authors       = ["Tasio Victoria <tasiovictoria@ujulabs.com>"]
description   = "Stargaze Fair Burn"
documentation = "https://docs.rs/stargaze-fair-burn"
edition       = "2021"
homepage      = "https://stargaze.zone"
repository    = "https://github.com/public-awesome/core"
license       = "Apache-2.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std    = "1.5.3"
cosmwasm-schema = "1.5.3"
cw-storage-plus = "1.2.0"
cw2             = "1.1.2"
cw-utils        = "1.0.3"
sg1             = { git = "https://github.com/public-awesome/launchpad.git", rev = "897d3ab057d381c1654c7246f3972ddd9f9238ce", package = "sg1" }
schemars        = "0.8.11"
serde           = "1.0.196"
thiserror       = "1.0.56"
semver          = "1.0.21"
anybuf          = "0.3.0"

[dev-dependencies]
cw-multi-test = "0.20.0"
test-suite    = { git = "https://github.com/public-awesome/launchpad.git", rev = "897d3ab057d381c1654c7246f3972ddd9f9238ce", package = "test-suite" }
