[package]
name          = "stargaze-royalty-registry"
version       = "0.4.0"
authors       = ["Tasio Victoria <tasiovictoria@ujulabs.com>"]
description   = "Stargaze Royalty Registry"
documentation = "https://docs.rs/stargaze-royalty-registry"
edition       = "2021"
homepage      = "https://stargaze.zone"
repository    = "https://github.com/public-awesome/core"
license       = "Apache-2.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std    = "1.5.3"
cosmwasm-schema = "1.5.3"
cw-storage-plus = "1.2.0"
cw2             = "1.1.2"
cw-utils        = "1.0.3"
sg-index-query  = { version = "0.1.0" }
sg721           = { version = "3.7.0", features = ["library"] }
sg721-base      = { version = "3.7.0", features = ["library"] }
schemars        = "0.8.11"
serde           = "1.0.196"
semver          = "1.0.21"
thiserror       = "1.0.56"

[dev-dependencies]
cw-multi-test   = "0.20.0"
sg-std          = "2.1.0"
sg2             = { git = "https://github.com/public-awesome/launchpad.git", rev = "897d3ab057d381c1654c7246f3972ddd9f9238ce", package = "sg2" }
test-suite      = { git = "https://github.com/public-awesome/launchpad.git", rev = "897d3ab057d381c1654c7246f3972ddd9f9238ce", package = "test-suite" }
vending-factory = { git = "https://github.com/public-awesome/launchpad.git", rev = "897d3ab057d381c1654c7246f3972ddd9f9238ce", package = "vending-factory" }
vending-minter  = { git = "https://github.com/public-awesome/launchpad.git", rev = "897d3ab057d381c1654c7246f3972ddd9f9238ce", package = "vending-minter" }
itertools       = "0.10.5"
anyhow          = "1.0.41"
